--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,13 +29,8 @@
         #count-container h2 {
             text-align: center;
         }
-
-        #graph-container { 
-            width: 80%;
-            margin: 0 10%;
-        }
-
-        h1 {
+        
+        h1, h2 {
             text-align: center;
         }
 
@@ -166,6 +161,7 @@
 </head>
 <body>
 	<h1>R'Trash</h1>
+    <h2>Location #9 (Berkley Campus)</h2>
     <div class="main-container">
         <div id="trash-container">
             <div class="trash-container container">
@@ -225,7 +221,7 @@
                 "timeout": 0,
                 "headers": {
                     "Content-Type": "application/json",
-                    "Authorization": "Bearer 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"
+                    "Authorization": "api key goes here"
                 },
                 "data": "",
             };
