--- a/frontend/index.html
+++ b/frontend/index.html
@@ -127,6 +127,11 @@
             text-align: center;
         }
 
+        #gpt-suggestion {
+            width: 90%;
+            margin: 2rem 5% 0 5%;
+        }
+
         @media only screen and (max-width: 500px) {
             .main-container {
                 display: flex;
@@ -161,7 +166,6 @@
 </head>
 <body>
 	<h1>R'Trash</h1>
-    <h2>Location #9 (Berkley Campus)</h2>
     <div class="main-container">
         <div id="trash-container">
             <div class="trash-container container">
@@ -221,7 +225,7 @@
                 "timeout": 0,
                 "headers": {
                     "Content-Type": "application/json",
-                    "Authorization": "api key goes here"
+                    "Authorization": "api ket here"
                 },
                 "data": "",
             };
